Ultime correzioni. Versione finale.

--- a/src/capitoli/capitolo-1.tex
+++ b/src/capitoli/capitolo-1.tex
@@ -152,7 +152,7 @@
     \end{itemize}
 
 \subsection{Documentazione}\label{sec:doc}
-    La documentazione di tutti i \textit{team} di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textbf{Confluence} sviluppato da \textbf{Atlassian}, il quale offre un editor di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
+    La documentazione di tutti i \textit{team} di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textbf{Confluence} sviluppato da \textbf{Atlassian}, il quale offre un \textit{editor} di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
 
 \newpage
 
