--- a/src/capitoli/capitolo-2.tex
+++ b/src/capitoli/capitolo-2.tex
@@ -100,12 +100,12 @@
         \item controllo della \gls{cosg} di \gls{zcsg} tramite l'\textit{\gls{idpg}};
         \item gestione delle \gls{distlistg} di \gls{zcsg} tramite l'\textit{\gls{idpg}};
         \item autenticazione a due fattori;
-        \item antegrazione con \textit{WebAuthn}\footnote{\url{https://www.w3.org/TR/webauthn-2/}}
+        \item integrazione con \textit{WebAuthn}\footnote{\url{https://www.w3.org/TR/webauthn-2/}}
     \end{itemize}
 
 \section{Aspettative personali}\label{sec:aspettative_personali}
 Nel corso della laurea triennale ho sempre avuto idea di ciò che volessi fare dal punto di vista professionale una volta finito gli studi. Tuttavia, prima di specializzarmi in un determinato ambito, ho deciso di esplorare altre realtà sfruttando l'opportunità di svolgere un'attività stage. Ciò che mi interessava quindi, era osservare in prima persona il modo di lavorare di professionisti, l'utilizzo di tecnologie (sia conosciute in ambito accademico sia per me nuove) a livello professionale e apprendere il più possibile sul mondo del lavoro. Inoltre avevo intezione di trovare un progetto di stage che potesse portare del valore concreto all'azienda e soprattutto avere la possibilità di completarlo nell'arco dei due mesi disponibili, invece di lavorare su prototipi usa e getta.
-Per poter avere un'idea dell'offerta dell'industria informatica attuale, ho partecipato all'evento \textit{Stage-IT} \footnote{\url{http://informatica.math.unipd.it/laurea/stageit.html}} organizzato dell'Università degli studi di Padova, pensato per mettere in contatto gli studenti con la realtà lavorativa. Durante l'evento ho sostenuto diversi colloqui con aziende che spesso proponevano dei progetti incentrati sull'esplorare una nuova tecnologia ed eventualmente sviluppare un prototipo. Poiché, come già accennato, il mio obiettivo era quello di portare a termine un prodotto finito e utilizzabile, ho continuato la mia ricerca anche dopo lo svolgersi dell'evento. Ho contattato altre aziende e sostenuto altri colloqui finché non ho trovato \textbf{Zextras}, che mi ha convinto fin da subito con il progetto proposto e con l'ambiente lavorativo presentato. Quindi i miei obiettivi da raggiungere con un progetto di stage erano:
+Per poter avere un'idea dell'offerta dell'industria informatica attuale, ho partecipato all'evento \textit{Stage-IT} \footnote{\url{http://informatica.math.unipd.it/laurea/stageit.html}} organizzato dall'Università degli studi di Padova, pensato per mettere in contatto gli studenti con la realtà lavorativa. Durante l'evento ho sostenuto diversi colloqui con aziende che spesso proponevano dei progetti incentrati sull'esplorare una nuova tecnologia ed eventualmente sviluppare un prototipo. Poiché, come già accennato, il mio obiettivo era quello di portare a termine un prodotto finito e utilizzabile, ho continuato la mia ricerca anche dopo lo svolgersi dell'evento. Ho contattato altre aziende e sostenuto altri colloqui finché non ho trovato \textbf{Zextras}, che mi ha convinto fin da subito con il progetto proposto e con l'ambiente lavorativo presentato. Quindi i miei obiettivi da raggiungere con un progetto di stage erano:
 \begin{itemize}
     \item lavorare ad un progetto per tutto il suo ciclo di sviluppo. In particolare, partire dalla fase iniziale di ricerca, passare alla fase di progettazione, implementare la soluzione proposta, collaudarlo e vederlo in funzione;
     \item osservare e provare l'utilizzo di linguaggi a me noti in ambito professionale;
