--- a/src/capitoli/capitolo-4.tex
+++ b/src/capitoli/capitolo-4.tex
@@ -62,21 +62,22 @@ Ho avuto inoltre modo di lavorare con un \textit{team} di sviluppo completo e di
 Sono rimasto anche sorpreso dal fatto che, nonostante la mia inesperienza, uno dei \textit{senior developer} del \textit{team} mi ha chiesto diverse volte un parere su come avremmo potuto implementare una certa funzionalità. Ciò mi ha fatto comprendere che, nella risoluzione di problemi è molto utile avere diversi pareri pur avendo acquisito un'esperienza considerevole.
 
 \subsubsection{Linguaggi e tecnologie}
-Dal punto di vista tecnico ho acquisito alcune conoscenze di cui mi ritengo soddisfatto. Innanzitutto ho potuto osservare e, in parte, mettere in azione in modo professionale alcune tecniche per l'utlizzo di un linguaggio di programmazione (\textit{Java}) da me conosciuto in ambito accademico.
+Dal punto di vista tecnico ho acquisito alcune conoscenze di cui mi ritengo soddisfatto. Innanzitutto ho potuto osservare e, in parte, mettere in azione in modo professionale alcune tecniche per l'utilizzo di un linguaggio di programmazione (\textit{Java}) da me conosciuto in ambito accademico.
 Inoltre ho compreso i vantaggi e le potenzialità di \textit{Docker}, una tecnologia che negli ultimi anni si è ampiamente diffusa sul mercato. \\
-Dal punto di vista aziendale mi sono reso conto che le tecnologie vengono sfruttate in tutti i modi possibili per poter raggiungere gli obiettivi, pur infrangendo alcuni principi teorici.
+Dal punto di vista aziendale mi sono reso conto che le tecnologie vengono sfruttate in tutti i modi possibili per poter raggiungere gli obiettivi. Infatti nel loro impiego può capitare di essere costretti a trovare il giusto compromesso, per esempio tra \textit{performance} e qualità del codice.
 
 \subsubsection{Strumenti}
 Ho visto in prima persona come avviene la gestione di un progetto costituito da molte parti e sviluppato da \textit{team} diversi. In particolare l'utilizzo di strumenti di coordinamento come \textbf{Jira} per la gestione di progetto e \textbf{Confluence} per la gestione della documentazione aziendale. \\
 Inoltre ho appreso molto dagli sviluppatori \textit{senior} del \textit{team}, i quali mi hanno mostrato come sfruttare al meglio e in modo professionale gli strumenti di sviluppo, al fine di incrementare la produttività e risparmiare tempo.
 
-\subsubsection{Modo di lavorare}
+\subsubsection{Metodo di lavoro}
 Oltre ai metodi di lavoro messi in atto dall'azienda, ho potuto sperimentare come condurre la ricerca e lo studio di nuovi argomenti, nel mio caso i protocolli, e come gestire il tempo a disposizione. Tuttavia su questo aspetto ho capito che devo migliorare il mio metodo in quanto, nonostante abbia raggiunto gli obiettivi, non era adeguato per un'analisi approfondita di ciò che stavo studiando. Infatti dopo aver terminato questa attività ho dovuto rivedere alcuni concetti che non avevo ancora compreso completamente.
 %**************************************************************
 \section{Valutazione personale}
 Questa esperienza mi ha fatto riflettere sulla relazione tra il mondo accademico e quello del lavoro. Tutto sommato ritengo che le nozioni apprese durante il corso di laurea triennale siano state molto utili durante questa esperienza, seppur non sufficienti per certi aspetti. \\
 Credo che questo meccanismo sia abbastanza naturale poiché l'obiettivo dell'università è quello di erogare conoscenze soprattutto teoriche, necessarie per poter mettere in pratica dei concetti in modo consapevole. Inoltre, essendo il mondo dell'informatica molto ampio, non è pensabile si esplorarlo in soli tre anni. \\
-Tuttavia, l'informatica è un campo molto dinamico, cresce e muta anno dopo anno portando alla luce nuovi metodi e tecnologie. Per questo motivo credo che l'offerta didattica erogata dai corsi universitari debba essere adeguatamente aggiornata per poter offrire dei contenuti che siano in linea con ciò che viene utilizzato in ambito professionale. Inoltre ho notato che molto spesso, quando viene insegnato un linguaggio o una tecnologia, capita che alcune soluzioni vengano etichettate come \textit{bad practice}, quando in realtà esistono dei casi d'uso specifici che vengono soddisfatti tramite l'applicazione di tali metodi. A tal proposito avrei preferito che alcuni corsi proponessero degli esempi meno didattici e più concreti, al fine di rendere l'apprendimento più coinvolgente ed efficace. \\
+Tuttavia, l'informatica è un campo molto dinamico, cresce e muta anno dopo anno portando alla luce nuovi metodi e tecnologie. Per questo motivo credo che l'offerta didattica erogata dai corsi universitari debba essere adeguatamente aggiornata per poter offrire dei contenuti che siano in linea con ciò che viene utilizzato in ambito professionale. %Inoltre ho notato che molto spesso, quando viene insegnato un linguaggio o una tecnologia, capita che alcune soluzioni vengano etichettate come non ottimali, quando in realtà esistono dei casi d'uso specifici che vengono soddisfatti tramite l'applicazione di tali metodi.
+Inoltre avrei preferito che alcuni corsi proponessero degli esempi meno didattici e più concreti, al fine di rendere l'apprendimento più coinvolgente ed efficace. \\
 Un modello di insegnamento che ho avuto modo di sperimentare durante questi tre anni, puntava sul fare in modo che lo studente avesse la possibilità di consolidare le conoscenze teoriche con l'ausilio di un progetto didattico significativo, cercando di diminuire il divario tra le conoscenze teoriche e le applicazioni pratiche. In questo caso per esempio, studiare la teoria limitandosi a leggere informazioni presenti nei libri di testo più comuni non era sufficiente, ma era necessario contestualizzarla nell'esperienza vissuta durante il progetto. Nel mio caso, questo metodo è estremamente efficace perché permette di comprendere a fondo i concetti, rendendo quindi poco interessante "ricordare" il loro significato. \\
 Nel complesso sono comunque soddisfatto di ciò che mi ha dato l'università, poiché mi ha messo di fronte a nozioni e argomenti che da solo non avrei mai esplorato, anche perché spesso molti aspetti teorici vengono ignorati in campo pratico. In questo modo ho compreso che il modo migliore di risolvere problemi, talvolta complessi, sia quello di unire teoria e pratica in modo strategico. Chiaramente dopo questa esperienza sarò più aperto ad una esplorazione più ampia del mondo dell'informatica, anche dopo aver terminato gli studi. \\
 L'attività di stage mi ha pienamente convinto e la consiglio a tutti coloro che hanno la possibilità di farlo, svolto anche in modalità diverse dalla mia, perché è importante per far capire allo studente cosa aspettarsi dal mondo del lavoro e per avere un'idea della tipologia di azienda in cui vuole lavorare.
