--- a/src/inizio-fine/ringraziamenti.tex
+++ b/src/inizio-fine/ringraziamenti.tex
@@ -20,11 +20,12 @@
 
 \noindent \textit{Innanzitutto, vorrei esprimere la mia gratitudine al Prof. Tullio Vardanega, relatore della mia tesi, per l'aiuto e il sostegno fornitomi durante la stesura del lavoro.}\\
 
+\noindent \textit{Ringrazio Zextras per l'opportunità e per la professionalità dimostrata. Ringrazio il team The Lucky Gunslingers per avermi guidato durante tutto il corso del progetto.}\\
+
 \noindent \textit{Desidero ringraziare con affetto la mia famiglia per il sostegno, il grande aiuto e per essermi stata vicina in ogni momento durante gli anni di studio.}\\
 
-\noindent \textit{Ringrazio i miei amici per le esperienze vissute durante questi anni. In particolar modo Andrea, Michele e Riccardo. Ringrazio inoltre le persone con cui ho avuto modo di condividere il percorso universitario.}\\
+\noindent \textit{Ringrazio infine i miei amici per le esperienze vissute durante questi anni. In particolar modo Andrea, Michele e Riccardo. Ringrazio inoltre le persone con cui ho avuto modo di condividere il percorso universitario.}\\
 
-\noindent \textit{Vorrei infine ringraziare Zextras per l'opportunità e per la professionalità dimostrata. Ringrazio il team The Lucky Gunslingers per avermi guidato durante tutto il corso del progetto.}\\
 
 \bigskip
 
